Added test classes Saver (what we wont to save in file) and Start (serializer and methods). Deleted helper classes. All logic moved in DeleteAdvert and UsingServer(there is Linq).

--- a/NixTrenProperty/NixTrenProperty.csproj
+++ b/NixTrenProperty/NixTrenProperty.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OnionApp.Domain.Core\OnionApp.Domain.Core.csproj" />
+    <ProjectReference Include="..\OnionApp.Domain.Interfaces\OnionApp.Domain.Interfaces.csproj" />
+    <ProjectReference Include="..\OnionApp.Infrastructure.Data\OnionApp.Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\OnionApp.Services.Interfaces\OnionApp.Services.Interfaces.csproj" />
+  </ItemGroup>
 
 </Project>
