--- a/OnionApp.Infrastructure.Data/OnionApp.Infrastructure.Data.csproj
+++ b/OnionApp.Infrastructure.Data/OnionApp.Infrastructure.Data.csproj
@@ -11,7 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OnionApp.Domain.Core\OnionApp.Domain.Core.csproj" />
     <ProjectReference Include="..\OnionApp.Domain.Interfaces\OnionApp.Domain.Interfaces.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migration\" />
   </ItemGroup>
 
 </Project>
